--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>The Little Kings</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta charset="utf-8" />
+  <title>The Little Kings NFT | Free Mint | 4444</title>
+  <meta name="description"
+    content="Being a Little King means being a part of an ecosystem where you can thrive off a synergy between other creators and executors no matter where you reside in the world. The kingdom is a space where education reigns supreme with an atmosphere of love and support between our fellow kings." />
+  <meta name="image" content="https://i.ibb.co/hRR29yR/Screenshot-of-Brave-Browser-7-15-22-7-48-04-PM.png" />
+  <meta itemprop="name" content="The Little Kings NFT | Free Mint | 4444" />
+  <meta itemprop="description"
+    content="Being a Little King means being a part of an ecosystem where you can thrive off a synergy between other creators and executors no matter where you reside in the world. The kingdom is a space where education reigns supreme with an atmosphere of love and support between our fellow kings." />
+  <meta itemprop="image" content="https://i.ibb.co/hRR29yR/Screenshot-of-Brave-Browser-7-15-22-7-48-04-PM.png" />
+  <meta name="og:title" content="The Little Kings NFT | Free Mint | 4444" />
+  <meta name="og:description"
+    content="Being a Little King means being a part of an ecosystem where you can thrive off a synergy between other creators and executors no matter where you reside in the world. The kingdom is a space where education reigns supreme with an atmosphere of love and support between our fellow kings." />
+  <meta name="og:image" content="https://i.ibb.co/hRR29yR/Screenshot-of-Brave-Browser-7-15-22-7-48-04-PM.png" />
+  <meta name="og:url" content="https://thelittlekings.vip" />
+  <meta name="og:site_name" content="The Little Kings NFT | Free Mint | 4444" />
+  <meta name="og:type" content="website" />
+</head>
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -40,6 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</body>
+
 </html>
